--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,7 +7,7 @@
 <body>
 <form action="/user/reg">
     用户名:<input name="username"><br>
-    密码:<br>
+    密 码:<input name="password"><br>
     <input type="submit">
 </form>
 </body>
