--- a/src/main/resources/static/vue基础.html
+++ b/src/main/resources/static/vue基础.html
@@ -13,10 +13,10 @@
 <!-- 开发环境版本，包含了有帮助的命令行警告 -->
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script>
-    var app=new Vue({
-        e1:"#app",
-        data:{
-            message:"hello vue"
+    var app = new Vue({
+        el: "#app",
+        data: {
+            message: "hello vue"
         }
     })
 </script>
