--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<form action="/user/login">
+<form action="/user/zhece">
     用户名:<input name="username"><br>
     密 码:<input name="password"><br>
     <input type="submit">
