--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 <div id="app">
-    <form>
-
-        用户名:<input v-model="username">
+    <form action="/user/reg">
+        <h1>注册</h1>
+        用户名:<input name="username">
         <br>
-        密码:<input v-model="password" type="password">
-
+        密码:<input name="password" type="password">
+        <input type="submit">
     </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -24,6 +24,9 @@
             password:"",
         }
     });
+
+
+
 
 
 </script>
