--- a/src/main/resources/static/reg.html
+++ b/src/main/resources/static/reg.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<form action="/user/zhuce">
+<form action="/user/reg">
     <h1>注册</h1>
     用户名:<input name="username"><br>
     密 码:<input name="password"><br>
