--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,24 +6,53 @@
 </head>
 <body>
 <div id="app">
-    <form action="/user/reg">
+    <form>
         <h1>注册</h1>
         用户名:<input name="username">
         <br>
-        密码:<input name="password" type="password">
-        <input type="submit">
+        密码:<input name="password">
+        <br>
+        <input type="button" value="注册" @click="reg()">
+        <br>
+        <input type="button" value="登陆" @click="login()">
+        <br>
+        <input type="button" value="查询" @click="query()">
     </form>
+    {{list}}
 </div>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
 <script>
 
-    let app=new Vue({
-        el:'#app',
-        data:{
-            username:"",
-            password:"",
-        }
-    });
+let app=new Vue({
+  el:'#app',
+  data:{
+    username:"",
+    password:"",
+    list:{},
+  },
+  methods:{
+    reg(){
+      jQuery.get('/user/reg?username='+this.username+'&password='+this.password).then(res=>{
+        this.message='注册'+res;
+      })
+    },
+    login(){
+      jQuery.get('/user/login?username='+this.username+'&password='+this.password).then(res=>{
+        this.message='登陆'+res;
+      })
+    },
+    query() {
+      jQuery.get('/user/findAll').then(res => {
+        this.list = JSON.parse(res);
+      });
+    },
+  }
+});
+
+
+
+
 
 
 
