--- a/src/main/resources/static/list5.html
+++ b/src/main/resources/static/list5.html
@@ -7,7 +7,7 @@
 <body>
 <div id="app">
     <form>
-        <h1>表格需要显示的数据</h1>
+        <h1>自动刷新</h1>
         用户名:<input name="username" v-model="username">
         <br>
         密码:<input name="password" v-model="password">
@@ -20,14 +20,24 @@
     </form>
     {{message}}
     <br>
-    <a href="list1.html">转换成表格</a>
+    <a href="list4.html">上一步</a>
     <br>
-    {{list}}
+    <a href="index.html">初始页面</a>
+    <br>
+    <table border="8">
+        <tr>
+            <th v-for="(value,key) in list[0]">{{key}}</th>
+            <th>操作</th>
+        </tr>
+        <tr v-for="line in list">
+            <td v-for="col in line">{{col}}</td>
+            <td><button @click="remove(line.id)">删除</button></td>
+        </tr>
+    </table>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
 <script>
-
 let app=new Vue({
   el:'#app',
   data:{
@@ -40,16 +50,24 @@ let app=new Vue({
     reg(){
       jQuery.get('/user/reg?username='+this.username+'&password='+this.password).then(res=>{
         this.message='注册'+res;
+        this.query();
       });
     },
     login(){
       jQuery.get('/user/login?username='+this.username+'&password='+this.password).then(res=>{
         this.message='登陆'+res;
+        this.query();
       });
     },
     query() {
       jQuery.get('/user/findAll').then(res => {
         this.list = JSON.parse(res);
+      });
+    },
+    remove(id){
+      jQuery.get('/user/remove?id='+id).then(res => {
+        this.message ='删除'+res;
+        this.query();
       });
     },
   },
