--- a/src/main/resources/static/list5.html
+++ b/src/main/resources/static/list5.html
@@ -31,7 +31,9 @@
         </tr>
         <tr v-for="line in list">
             <td v-for="col in line">{{col}}</td>
-            <td><button @click="remove(line.id)">删除</button></td>
+            <td>
+                <button @click="remove(line.id)">删除</button>
+            </td>
         </tr>
     </table>
 </div>
@@ -75,7 +77,6 @@ let app=new Vue({
     this.query();
   }
 });
-
 </script>
 </body>
 </html>
